# PDFSummarizer

./: .gitignore  README.md  main.py  populate_database.py  pyproject.toml  requirements.txt  templates.py
